--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -8,7 +8,8 @@ trigger:
 
 pool:
   name:  Default
-  demands: DESKTOP-8JJTO4Q
+  demands:
+  - agent.name -equals DESKTOP-8JJTO4Q
 
 steps:
 - task: Maven@3
