--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -8,8 +8,7 @@ trigger:
 
 pool:
   name:  Default
-  demands:
-  - agent.name -equals DESKTOP-8JJTO4Q
+  demands: Agent.Version -equals DESKTOP-8JJTO4Q
 
 steps:
 - task: Maven@3
