--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -8,7 +8,7 @@ trigger:
 
 pool:
   name:  Default
-  demands: Agent.Version -equals DESKTOP-8JJTO4Q
+  demands: Agent.Version -equals 3.236.1
 
 steps:
 - task: Maven@3
